# globalopt

./: ._bbob_problem_best_parameter.txt  .gitignore  Cargo.toml  README.md  REFERENCES.bib  REPLICATION.md  build.rs
benchmarks/: analyze.py  ffi_overhead.R  ffi_overhead.py  launch_bbob_shard.sh  poc_rotated_exkor.R  problems.R  problems.py  run_bbob.py  run_bench.R  run_bench.py  run_gp_parallel.py
benchmarks/results/: ffi_python.csv  ffi_python_before_fix.csv  ffi_python_da4.csv  ffi_r.csv  poc_rotated_exkor.csv  results_bbob_shard0-1-2-3-4-5.csv  results_bbob_shard0-1-2.csv  results_bbob_shard3-4.csv  results_bbob_shard5.csv  results_bbob_shardgp.csv  results_python.csv  results_python_gp.csv  results_python_shgo.csv  results_r.csv  summary.json
docs/: DESIGN_WRAPPERS.md  FFI_FINDINGS.md  FORTRAN_INTERFACES.md
docs/benchmarks/: APPLES_TO_APPLES.md  GAP_ASSESSMENT.md  README.md  WINNER_TABLES.md  apples_to_apples_python_globalopt.csv  apples_to_apples_r_globalopt.csv
examples/: bayes1_furasn.rs  glopt_furasn.rs  lpmin_furasn.rs  mig2_furasn.rs
fortran/: gm.h  gm_shim.c
paper/: TOMS_SUBMISSION.md  abstract.tex  abstract.txt  arxiv_metadata.txt  body.tex  main.tex  main_toms.aux  main_toms.out  main_toms.tex  refs.bib
paper/tab/: median_gap.tex
paper/toms_package/: abstract.tex  main_toms.bbl  refs.bib
paper/toms_package/tab/: median_gap.tex
python/: README.md  RELEASE_PYPI.md  pyproject.toml
python/examples/: bayes1_example.py  benchmark_example.py  mig2_example.py
python/examples/output/: benchmark_external_comparison.csv  benchmark_external_comparison.md  benchmark_globalopt_vs_external.csv  benchmark_globalopt_vs_external.md  benchmark_results.csv  benchmark_results.md
python/globalopt/: __init__.py  api.py  benchmarks.py  local_minimizers.py
python/globalopt_native/: __init__.py
python/tests/: test_benchmarks.py  test_fortran_backend.py
r/globalopt/: DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  RELEASE_CRAN.md
r/globalopt/R/: api.R  api2.R  benchmarks.R  globalopt.R  local_minimizers.R  objectives.R  reference.R
r/globalopt/examples/: benchmark_end_to_end_backends.R  benchmark_example.R  benchmark_native_interfaces.R
r/globalopt/man/: anal1.Rd  anal2.Rd  ats_state.Rd  bayes1.Rd  builtin_objectives.Rd  eval_builtin.Rd  exkor.Rd  extr.Rd  flexi.Rd  globalopt-package.Rd  glopt.Rd  lbayes.Rd  local_minimize.Rd  lp_tau_point.Rd  lpmin.Rd  mig1.Rd  mig2.Rd  mivar4.Rd  objectives.Rd  reqp.Rd  unt.Rd
r/globalopt/src/: Makevars  anal2.f  exkor.f  extr.f  glopt.f  gm_fi.f  gm_util.f  init.c  lbayes.f  mig1.f  r_glue.c
r/globalopt/tests/: testthat.R
r/globalopt/vignettes/: globalopt.Rmd
src/: benchmarks.rs  fortran.rs  lib.rs  lptau.rs  optimizers.rs  python_bindings.rs
tools/: make_arxiv_bundle.sh  make_replication_artifact.sh  make_toms_package.sh  sync_fortran.sh
upstream/GlobalMinimumFortran/: COPYNG  Makefile  README  anal1.f  anal2.f  bayes1.f  constants.c  ex3.f  ex8.f  ex9.f  exkor.f  extr.f  flexi.f  glopt.f  i1mach.f  i1mach1.f  i1mach2.f  i1mach3.f  i1mach4.f  i1mach5.f  lbayes.f  lpmin.f  mig1.f  mig2.f  mivar4.f  reqp.f  unt.f
(+18 files in other folders)
