[package]
name = "globalopt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust port of core routines from GlobalMinimumFortran (Mockus)"
repository = "https://github.com/audrism/globalopt"

[lib]
name = "globalopt"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1"
rayon = "1"
pyo3 = { version = "0.22", features = ["extension-module"] }

[dev-dependencies]
approx = "0.5"
