[package]
name = "globalopt"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust port of core routines from GlobalMinimumFortran (Mockus)"
repository = "https://github.com/audrism/globalopt"

[lib]
name = "globalopt"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["fortran"]
# Compile and link the original GlobalMinimum Fortran library (requires
# gfortran at build time); enables the "fortran" backend.
fortran = []
# Build the pyo3 extension module (globalopt_native).  Not a default
# feature: pyo3's extension-module mode leaves Python symbols
# unresolved, which breaks plain `cargo test` / example binaries.
# maturin enables it via [tool.maturin] features in python/pyproject.toml.
python = ["dep:pyo3"]

[dependencies]
thiserror = "1"
rayon = "1"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
approx = "0.5"
