[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "globalopt-py"
version = "0.2.0"
description = "Python APIs for GlobalMinimum-style optimization routines"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "globalopt contributors" }]

[project.optional-dependencies]
benchmark = ["scipy>=1.10", "pymoo>=0.6", "pygmo>=2.19", "nevergrad>=1.0", "deap>=1.4", "optuna>=3.0"]
test = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
module-name = "globalopt_native.globalopt_native"
python-source = "."
manifest-path = "../Cargo.toml"
# "python" enables the pyo3 bindings; the default "fortran" feature stays on,
# linking the original GlobalMinimum Fortran library (requires gfortran).
features = ["python"]
# Ship the pure-Python API package alongside the native module.
include = [{ path = "globalopt/**/*.py", format = ["sdist", "wheel"] }]
